--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,3 +30,12 @@
     text-align: left;
 }
 
+.button-text {
+    font-size: 0.6rem;
+}
+
+.button-orange {
+    background-color: #e6ae4c;
+    border: 2px solid #dc8c00;
+    color: #fff;
+}
